test/sema/typeck/for/not-iterable-int.out
error: type `Int32` doesn't implement IntoIterator or Iterator trait.
--> not-iterable-int.dora:1:19
 | fn f() { for i in 1i32 {} }
                     ~~~~
 | 
1 error found.
