test/sema/typeck/for/not-iterable-int.dora
fn f() { for i in 1i32 {} }
